Disabled dev mode for vue.js

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
     </div>
 
     <!-- js imports -->
-    <script src="https://unpkg.com/vue@2.1.10/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue@2.1.10/dist/vue.min.js"></script>
     <script src="/js/app.js"></script>
     <script>
     if ('serviceWorker' in navigator) {
