SSowL should be slightly smaller ;), also added print/pdf icons to footer

--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@
             <div class="addthis_inline_share_toolbox"></div>
 
             <p>
+                <i class="fa fa-print"></i>
                 <small>Looking for a printed or PDF version of this page? This page is print friendly and you can normally print to PDF :)</small>
+                <i class="fa fa-file-pdf-o"></i>
             </p>
 
         </footer>
