--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="theme-color" content="#fef7e1">
 
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Noto+Serif:400,400i,700,700i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif:700|Noto+Sans:400,400i,700,700i" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/normalize.css@5.0.0/normalize.css">
     <link rel="stylesheet" href="https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/app.css">
