--- a/index.html
+++ b/index.html
@@ -333,6 +333,7 @@
             console.log('ServiceWorker registration successful with scope: ', registration.scope);
         }).catch(function(err) {
             console.log('ServiceWorker registration failed: ', err);
+            window.ga('send', 'event', 'sw error', 'ServiceWorker registration failed', err);
         });
     });
     }
